Migration to JakartaEE (INCOMPLETE!)
Change to JakartaEE / JDK17 and update dependencies. Migration to
Hibernate 6.1 still requires some rework of the de.ipb_halle.lbac.util.hibernatePG
sub-packages. Additional issues will be discovered as soon as the
code compiles!